# polygon_intersection

./: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  documentation.rtf  refman.rtf
lib/: CMakeLists.txt  poligon.cpp  poligon.h
src/: CMakeLists.txt  poligon.h
test/: CMakeLists.txt  test.cpp
